--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,8 @@
-spring.datasource.url=
-spring.datasource.username=
-spring.datasource.password=
-telegram.bot.token=
+spring.datasource.url=jdbc:postgresql://localhost:5432/notification_task
+spring.datasource.username=telegram
+spring.datasource.password=qazedctgb123
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database=postgresql
+spring.liquibase.change-log=classpath:liquibase/changelog-master.yml
+
+telegram.bot.token=7908066066:AAGpb_x92yX73vXFmOJCrrOzvllBBnz9S8k
